<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/welcome_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
...
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/welcome"
             />

        <Button
            android:id="@+id/signInButton"
            style="@style/button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_rectangle"
            android:text="@string/sign_in"
...
